infrastructure/k8s/aiohttp-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aiohttp-shortener
  labels:
    name: aiohttp-shortener
