infrastructure/k8s/aiohttp-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiohttp-api
  labels:
    app: aiohttp-api
spec:
  selector:
    matchLabels:
      app: aiohttp-api
  replicas: 1
  template:
    metadata:
      labels:
        app: aiohttp-api
    spec:
      containers:
      - name: aiohttp-api
        image: maxtacu/aiohttp-urlshortener:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
