infrastructure/k8s/aiohttp-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiohttp-api
  labels:
    app: aiohttp-api
spec:
  selector:
    app: aiohttp-api
  type: NodePort
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
